--- a/src/main/resources/templates/bookstore.html
+++ b/src/main/resources/templates/bookstore.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org-extras-springsecurity5">
 <head>
 <title>Bookstore</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
 <body>
-<h1>Bookstore</h1>
+<div class="col-md-4"><h1>Bookstore</h1></div>
+
+	<div class="col-md-4">
+		<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+	</div>
+
+	<div class="col-md-4">
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+		</form>
+	</div>
+	
 <table class="table table-striped">
 	<tbody>
 		<tr>
@@ -24,8 +35,8 @@
 			<td th:text = "${book.year}"/>
 			<td th:text = "${book.price}"/>
 			<td th:text = "${book.category.name}"/>
-			<td><a th:href="@{/delete/{id}(id=${book.Id})}" class="btn btn-danger">Delete</a>
-			<td><a th:href="@{/edit/{id}(id=${book.Id})}">Edit</a>
+			<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.Id})}" class="btn btn-danger">Delete</a></td>
+			<td><a th:href="@{/edit/{id}(id=${book.Id})}">Edit</a></td>
 		</tr>
 	</tbody>
 </table>
